--- a/packages/public-client/src/app/components/pages/inside/inside.component.html
+++ b/packages/public-client/src/app/components/pages/inside/inside.component.html
@@ -1,6 +1,6 @@
 <app-site-page>
-  <div class="text-content">
-    <h1>We're still <span>building</span>...</h1>
+  <div class="text-content">    
+    <h1 id="construction">We're still <span>building</span>...</h1>
     <p class="subtitle">...10 years wasn't quite long enough.</p>
     <p class="blurb">
       <!-- <a class="facebook" href="https://www.facebook.com/diveinndenver" target="_blank">
@@ -18,7 +18,8 @@
     </a>
   </div>
   <div class="flyers">
-    <img class="specials" src="assets/images/specials/10th_Anniversary_Specials.png" />
-    <img class="menu" src="assets/images/menu/Dive_Inn_Menu.jpg" />
+    <img id="anniversary" class="specials" src="assets/images/specials/10th_Anniversary_Specials.png" />
+    <img id="menu" class="menu" src="assets/images/menu/Dive_Inn_Menu.jpg" />
+    <a class="cluck" href="http://cluckchickenden.com/"><img src="assets/images/Cluck_Chicken.svg" /></a>
   </div>
 </app-site-page>
