--- a/packages/shared/scss/_colors.scss
+++ b/packages/shared/scss/_colors.scss
@@ -2,17 +2,17 @@ $dive-white: #ebebeb;
 $dive-red: #de2726;
 $dive-red-dk: #5a1716;
 $dive-black: #151212; // rgb(21, 18, 18)
-$dive-gray-lt: #cbb;
-$dive-gray-md: #988;
-$dive-gray-dk: #544;
+$dive-gray-lt: #ccbbbb;
+$dive-gray-md: #999988;
+$dive-gray-dk: #554444;
 $dive-gray-dk2: #403535;
 $dive-gray-dk3: #262020;
-$dive-yellow: #ca0;
+$dive-yellow: #dfaf0f; // #cfaf0f;
+$dive-orange: #f08010;
 
 
 $dive-green: transparent;
 
-$dive-orange: #f08010;
 
 ///////////////////////
 
