--- a/packages/public-client/src/app/components/pages/inside/inside.component.html
+++ b/packages/public-client/src/app/components/pages/inside/inside.component.html
@@ -1,12 +1,13 @@
 <app-site-page>
-  <div class="text-content">    
+  <div class="text-content">
     <h1 id="construction">We're still <span>building</span>...</h1>
     <p class="subtitle">...10 years wasn't quite long enough.</p>
     <p class="blurb">
       <!-- <a class="facebook" href="https://www.facebook.com/diveinndenver" target="_blank">
         <img src="assets/images/facebook_logo.png" />
       </a> -->
-      For now, please see our <a href="https://www.facebook.com/diveinndenver" target="_blank">Facebook page</a> for updates on events, specials, and all the latest Dive Inn happenings.      
+      For now, please see our <a href="https://www.facebook.com/diveinndenver" target="_blank">Facebook page</a> for
+      updates on events, specials, and all the latest Dive Inn happenings.
     </p>
   </div>
   <div class="links">
@@ -20,6 +21,14 @@
   <div class="flyers">
     <img id="anniversary" class="specials" src="assets/images/specials/10th_Anniversary_Specials.png" />
     <img id="menu" class="menu" src="assets/images/menu/Dive_Inn_Menu.jpg" />
-    <a class="cluck" href="http://cluckchickenden.com/"><img src="assets/images/Cluck_Chicken.svg" /></a>
+  </div>
+  <div class="cluck-container">
+    <a class="cluck" href="http://cluckchickenden.com/" target="_blank">
+      <img src="assets/images/Cluck_Chicken.svg" />
+      <div>
+        <h2>Cluck Chicken</h2>
+      </div>
+      <p>Taste some of Denver's best fried chicken at our friends nextdoor!</p>
+    </a>
   </div>
 </app-site-page>
