--- a/packages/public-client/src/app/components/pages/inside/inside.component.scss
+++ b/packages/public-client/src/app/components/pages/inside/inside.component.scss
@@ -197,9 +197,50 @@
       display: block;
       border-radius: 1rem;
     }
+  }
 
-    .cluck {
-      max-width: 10vw;
+  .cluck-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 6vw;
+    .cluck {      
+      position: relative;
+      text-align: center;
+      text-shadow: 2px 2px 2px #000;
+
+      &::after {
+        content: none;
+      }
+      
+      > * {
+        width: 30vw;
+      }
+
+      img {
+        display: block;
+      }
+
+      > div {
+        position: absolute;
+        top: 0; bottom: 0; left: 0; right: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;      
+        h2 {        
+          margin: 0;
+          padding-bottom: 3vw;
+          font-size: 5vw;
+          font-family: 'Anton', sans-serif;
+        }
+      }
+      p {
+        width: 24vw;
+        margin: 0 auto;
+        font-size: 1.75vw;
+      }
     }
   }
 }
