--- a/packages/public-client/src/app/components/shared/icon-card/icon-card.component.scss
+++ b/packages/public-client/src/app/components/shared/icon-card/icon-card.component.scss
@@ -3,105 +3,226 @@
 @mixin FlexCenter {
   display: flex;
   justify-content: center;
-  align-items: center;    
+  align-items: center;
 }
 
+// @keyframes flipCard {
+//   0% { transform: scale(1) rotateY(0) rotateZ(0); }
+//   50% { transform: scale(1.92) rotateY(90) rotateZ(10); }
+//   100% { transform: scale(1) rotateY(180) rotateZ(0); }
+// }
+// @keyframes unflipCard {
+//   0% { transform: scale(1) rotateY(180) rotateZ(0); }
+//   50% { transform: scale(1.92) rotateY(90) rotateZ(10); }
+//   100% { transform: scale(1) rotateY(0) rotateZ(0); }
+// }
+
+$cardWidth: 28vw;
+$cardWidthLg: 24vw;
+$cardHeight: 19.5vw;
+$cardHeightLg: 17vw;
+$imgSize: 7.5vw;
+$imgSizeLg: 6.5vw;
+$cardMargin: 1vw;
+$cornerButtonSize: 1vw;
+$fontSize: 2.0vw;
+$fontSize2: 2.75vw;
+$fontSizeLg: 1.5vw;
+$fontSize2Lg: 2.25vw;
+
 :host {
-  display: flex;
-  flex-direction: row;
-  padding: 2vw;
-  gap: 4vw;
-  border-radius: 1rem;
-  box-shadow: 1px 1px 4px 0px utility.$dive-black;
-  transition: box-shadow 0.25s ease;
-  font-size: 1.65rem;
+  display: block;
 
-  &:hover {
-    box-shadow: 3px 3px 6px 0px utility.$dive-black;
-  }
-  &:active {
-    box-shadow: 0px 0px 2px 0px utility.$dive-black;
-  }
-  .icon-container {
-    flex: 0 18vw;
-    //width: 14vw;
-    margin-left: 1vw;
-    @include FlexCenter();
-    > div {
-      height: 100%;
-    }
-  }
-  .text-container {
-    width: 100%;
-    margin-right: 1vw;
-    text-shadow: 1px 1px 2px utility.$dive-black;
-    @include FlexCenter();
+  .card-container {    
+    display: flex;
+    flex-direction: row;
+    margin: $cardMargin 0;
+    gap: 4vw; // only flex at xs size
+    font-size: 1.65rem;
+    perspective: 1000px;
+    cursor: pointer;
     
-    font-size: 4vw;
-    white-space: nowrap;      
-    .large {
-      font-size: 6vw;
-    }
+    .card-content {
+      position: relative;
+      width: $cardWidth;
+      height: $cardHeight;
+      max-width: 30rem;
+      transform-style: preserve-3d;
+      transform: rotateY(0deg);
+      animation: unflipCard 0.6s ease 0 forwards;
+      &.flipped {
+        //transform: rotateY(180deg);
+        animation: flipCard 0.6s ease 0 forwards;
+      }
+      //overflow: hidden;
+      
+      border-radius: 1rem;
+      box-shadow: 1px 1px 4px 0px utility.$dive-black;
+      background-color: utility.$dive-red;
+      transition: box-shadow 0.25s ease; //, transform 0.5s ease;
 
-    .center {
-      @include FlexCenter();
-      flex-direction: column;
-      text-align: center;
-    }
-  }
+      &:hover {
+        box-shadow: 3px 3px 6px 0px utility.$dive-black;
+      }
 
-  @include utility.media-breakpoint-gte(xs) {
-    display: block;
-    font-size: 1.25vw;
+      &:active {
+        box-shadow: 0px 0px 2px 0px utility.$dive-black;
+      }
 
-    .icon-container {
-      @include FlexCenter;      
-      margin: 0 0 1.15vw;
-      $imgSize: 8vw;
-      svg {
-        max-width: $imgSize;
-        max-height: $imgSize;
+      > div {
+        position: absolute;
+        width: 100%;
+        height: 100%;        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        backface-visibility: hidden;
+        border-radius: 1rem;
+
+        &.card-face {
+
+        }
+        &.card-back {
+          transform: rotateY(180deg);
+          background-color: utility.$dive-black;
+          overflow: hidden;
+
+          .corner-button {
+            z-index: 1;
+            position: absolute;
+            bottom: $cardMargin - 0.1vw;
+            left: $cardMargin - 0.1vw;
+            //width: 8vw;
+            //height: 4vw;
+            //transform: translateX(0%) translateY(-50%) rotate(45deg);
+            background: transparent; //utility.$dive-black;
+            border: 1px solid magenta;
+            border-top: $cornerButtonSize solid transparent;
+            border-right: $cornerButtonSize solid transparent;
+            border-bottom: $cornerButtonSize solid utility.$dive-black;
+            border-left: $cornerButtonSize solid utility.$dive-black;
+            cursor: pointer;
+            > div {
+              z-index: 2;
+              position: absolute;
+              top: 0.5vw;
+              left: -1.25vw;
+              //width: 2vw;
+              //transform: rotate(-45deg);
+              $backBtnSize: 0.35vw;
+              border-top: $backBtnSize solid transparent;
+              border-bottom: $backBtnSize solid transparent;
+              border-right: $backBtnSize + 0.35vw solid utility.$dive-red;
+            }
+            // img {
+            //   position: absolute;
+            //   top: 15%;
+            //   left: 20%;
+            //   width: 2vw;
+            //   transform: rotate(-45deg);
+            // }
+          }
+        }
+      }
+
+      .icon-container {
+        //flex: 0 18vw;
+        margin-left: 1vw;
+        @include FlexCenter();
+
+        > div {
+          //height: 100%;
+        }
+      }
+
+      .text-container {
+        width: 100%;
+        margin-right: 1vw;
+        text-shadow: 1px 1px 2px utility.$dive-black;
+        @include FlexCenter();
+
+        font-size: $fontSize;
+        white-space: nowrap;
+
+        .large {
+          font-size: $fontSize2;
+        }
+
+        .center {
+          @include FlexCenter();
+          flex-direction: column;
+          text-align: center;
+        }
       }
     }
 
-    .text-container {
-      @include FlexCenter;
-      margin: 0;
-      flex-direction: column;
-      font-size: 2vw;
-      .large {
-        font-size: 3vw;
-      } 
-    }
-  }
-  @include utility.media-breakpoint-gte(md) {
-    .text-container {
-      @include FlexCenter;
-      margin: 0;
-      flex-direction: column;
-      //font-size: 1rem;
-      .large {
-        //font-size: 1.5rem;
-      } 
-    }        
-  }
-  @include utility.media-breakpoint-gte(lg) {
-    .icon-container {            
-      svg {
-        $imgSize: 5vw;
-        max-width: $imgSize;
-        max-height: $imgSize;
+    @include utility.media-breakpoint-gte(xs) {
+      .card-content {
+        .icon-container {          
+          @include FlexCenter;
+          margin: 0 0 1vw;         
+
+          svg {
+            max-width: $imgSize;
+            max-height: $imgSize;
+          }
+        }
+
+        .text-container {
+          @include FlexCenter;
+          margin: 0;
+          flex-direction: column;
+          //font-size: 1.5vw;
+
+          .large {
+            //font-size: 2.25vw;
+          }
+        }
       }
     }
-    .text-container {
-      @include FlexCenter;
-      //flex: 0 10vw;
-      margin: 0;
-      flex-direction: column;
-      font-size: 1.5vw;
-      .large {
-        font-size: 2.25vw;
-      } 
-    }        
+
+    @include utility.media-breakpoint-gte(md) {
+      display: block;
+      .card-content {
+        .icon-container {
+          
+        }
+        .text-container {
+          @include FlexCenter;
+          margin: 0;
+          flex-direction: column;
+
+          .large {
+          }
+        }
+      }
+    }
+
+    @include utility.media-breakpoint-gte(lg) {
+      .card-content {
+        width: $cardWidthLg;
+        height: $cardHeightLg;
+
+        .icon-container {
+          svg {
+            max-width: $imgSizeLg;
+            max-height: $imgSizeLg;
+          }
+        }
+        
+        .text-container {
+          @include FlexCenter;
+          margin: 0;
+          flex-direction: column;
+          font-size: $fontSizeLg;
+
+          .large {
+            font-size: $fontSize2Lg;
+          }
+        }
+      }
+    }
   }
+
 }
