--- a/packages/public-client/src/app/components/features/contact-section/contact-section.component.scss
+++ b/packages/public-client/src/app/components/features/contact-section/contact-section.component.scss
@@ -13,20 +13,28 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 4vw;
+    //gap: 4vw;
     padding: 4vw 4vw 8vw;
     $bgColor: transparent; //rgba(0, 0, 255, 0.51);
     $bgColor2: utility.$dive-red;
     background-color: darken($bgColor2, 17%);
+
     background-image:
-      radial-gradient(circle at 50% 50%, $bgColor2 20%, $bgColor 40%),
-      radial-gradient(circle at 20% 50%, $bgColor2 15%, $bgColor 30%),
-      radial-gradient(circle at 80% 50%, $bgColor2 15%, $bgColor 30%),
+      radial-gradient(circle at 50% 20%, $bgColor2 20%, $bgColor 60%),
+      radial-gradient(circle at 50% 50%, $bgColor2 15%, $bgColor 60%),
+      radial-gradient(circle at 50% 80%, $bgColor2 15%, $bgColor 60%),
       linear-gradient(0deg, transparent 0%, transparent 99.5%, utility.$dive-black 100%);
+    @include utility.media-breakpoint-gte(sm) {
+      background-image:
+        radial-gradient(circle at 50% 50%, $bgColor2 20%, $bgColor 40%),
+        radial-gradient(circle at 20% 50%, $bgColor2 15%, $bgColor 30%),
+        radial-gradient(circle at 80% 50%, $bgColor2 15%, $bgColor 30%),
+        linear-gradient(0deg, transparent 0%, transparent 99.5%, utility.$dive-black 100%);
+    }
 
     app-icon-card {
-      width: 90vw;
-      flex: 1 20vw;
+      //width: 90vw;
+      flex: 1 16vw; // vertical space between cards
       // background-color: utility.$dive-red;
       google-map {
         overflow: hidden;
@@ -76,13 +84,17 @@
     }
 
     @include utility.media-breakpoint-gte(xs) {
-      flex-direction: row;
       padding: 4vw 1vw 10vw;
-      gap: 3vw;
+      //gap: 3vw;
+      app-icon-card {
+        //width: 70vw;
+      }
     }
     @include utility.media-breakpoint-gte(sm) {
+      flex-direction: row;
       padding: 4vw 0vw 10vw;
       app-icon-card {
+        //width: unset;
         flex: 0 28.5vw;
       }
     }
