--- a/packages/public-client/src/app/components/shared/icon-card/icon-card.component.scss
+++ b/packages/public-client/src/app/components/shared/icon-card/icon-card.component.scss
@@ -1,3 +1,4 @@
+@use "sass:map";
 @use '../../scss/utility';
 
 @mixin FlexCenter {
@@ -5,30 +6,39 @@
   justify-content: center;
   align-items: center;
 }
+@mixin DiagonalCorner {
+  background: transparent;
+  border-top: $cornerButtonSize solid transparent;
+  border-right: $cornerButtonSize solid transparent;
+  border-bottom: $cornerButtonSize solid utility.$dive-black;
+  border-left: $cornerButtonSize solid utility.$dive-black;
+}
+@mixin ArrowLeft {
+  border-top: $backBtnSize solid transparent;
+  border-bottom: $backBtnSize solid transparent;
+  border-right: $backBtnSize + 0.35vw solid utility.$dive-red;
+}
 
-// @keyframes flipCard {
-//   0% { transform: scale(1) rotateY(0) rotateZ(0); }
-//   50% { transform: scale(1.92) rotateY(90) rotateZ(10); }
-//   100% { transform: scale(1) rotateY(180) rotateZ(0); }
-// }
-// @keyframes unflipCard {
-//   0% { transform: scale(1) rotateY(180) rotateZ(0); }
-//   50% { transform: scale(1.92) rotateY(90) rotateZ(10); }
-//   100% { transform: scale(1) rotateY(0) rotateZ(0); }
-// }
+$cardWidths: ('zero': 90vw, 'xs': 70vw, 'sm': 28vw, 'md': 28vw, 'lg': 24vw);
+$cardMaxWidth: 30rem;
+$cardHeights: ('zero': 14vw, 'md': 19.5vw, 'lg': 17vw);
+$imgSizes: ('zero': 8.5vw, 'md': 7.5vw, 'lg': 6.5vw);
+$fontPrimarySizes: ('zero': 4.5vw, 'md': 2.75vw, 'lg': 2.25vw);
+$fontSecondarySizes: ('zero': 3.5vw, 'md': 2vw, 'lg': 1.5vw);
 
-$cardWidth: 28vw;
-$cardWidthLg: 24vw;
-$cardHeight: 19.5vw;
-$cardHeightLg: 17vw;
-$imgSize: 7.5vw;
-$imgSizeLg: 6.5vw;
-$cardMargin: 1vw;
+// $cardWidth: 28vw;
+// $cardWidthLg: 24vw;
+// $cardHeight: 19.5vw;
+// $cardHeightLg: 17vw;
+// $imgSize: 7.5vw;
+// $imgSizeLg: 6.5vw;
+
 $cornerButtonSize: 1vw;
-$fontSize: 2.0vw;
-$fontSize2: 2.75vw;
-$fontSizeLg: 1.5vw;
-$fontSize2Lg: 2.25vw;
+// $fontSize: 2.0vw;
+// $fontSize2: 2.75vw;
+// $fontSizeLg: 1.5vw;
+// $fontSize2Lg: 2.25vw;
+$backBtnSize: 0.35vw;
 
 :host {
   display: block;
@@ -36,35 +46,27 @@ $fontSize2Lg: 2.25vw;
   .card-container {    
     display: flex;
     flex-direction: row;
-    margin: $cardMargin 0;
-    gap: 4vw; // only flex at xs size
+    margin: 0;
+    //gap: 4vw; // only flex up to sm size
     font-size: 1.65rem;
     perspective: 1000px;
     cursor: pointer;
     
     .card-content {
       position: relative;
-      width: $cardWidth;
-      height: $cardHeight;
-      max-width: 30rem;
+      width: map.get($cardWidths, 'zero');
+      height: map.get($cardHeights, 'zero');
+      max-width: $cardMaxWidth;
       transform-style: preserve-3d;
-      transform: rotateY(0deg);
-      animation: unflipCard 0.6s ease 0 forwards;
-      &.flipped {
-        //transform: rotateY(180deg);
-        animation: flipCard 0.6s ease 0 forwards;
-      }
-      //overflow: hidden;
-      
+      transform: rotateY(0deg);      
       border-radius: 1rem;
-      box-shadow: 1px 1px 4px 0px utility.$dive-black;
       background-color: utility.$dive-red;
-      transition: box-shadow 0.25s ease; //, transform 0.5s ease;
-
+      transition: box-shadow 0.25s ease;
+      
+      box-shadow: 1px 1px 4px 0px utility.$dive-black;
       &:hover {
         box-shadow: 3px 3px 6px 0px utility.$dive-black;
       }
-
       &:active {
         box-shadow: 0px 0px 2px 0px utility.$dive-black;
       }
@@ -73,15 +75,11 @@ $fontSize2Lg: 2.25vw;
         position: absolute;
         width: 100%;
         height: 100%;        
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        @include FlexCenter();
         backface-visibility: hidden;
         border-radius: 1rem;
 
         &.card-face {
-
         }
         &.card-back {
           transform: rotateY(180deg);
@@ -91,48 +89,35 @@ $fontSize2Lg: 2.25vw;
           .corner-button {
             z-index: 1;
             position: absolute;
-            bottom: $cardMargin - 0.1vw;
-            left: $cardMargin - 0.1vw;
-            //width: 8vw;
-            //height: 4vw;
-            //transform: translateX(0%) translateY(-50%) rotate(45deg);
-            background: transparent; //utility.$dive-black;
-            border: 1px solid magenta;
-            border-top: $cornerButtonSize solid transparent;
-            border-right: $cornerButtonSize solid transparent;
-            border-bottom: $cornerButtonSize solid utility.$dive-black;
-            border-left: $cornerButtonSize solid utility.$dive-black;
+            bottom: -0.1vw;
+            left: -0.1vw;
+            @include DiagonalCorner();
             cursor: pointer;
             > div {
               z-index: 2;
               position: absolute;
               top: 0.5vw;
               left: -1.25vw;
-              //width: 2vw;
-              //transform: rotate(-45deg);
-              $backBtnSize: 0.35vw;
-              border-top: $backBtnSize solid transparent;
-              border-bottom: $backBtnSize solid transparent;
-              border-right: $backBtnSize + 0.35vw solid utility.$dive-red;
+              
+              @include ArrowLeft();
             }
-            // img {
-            //   position: absolute;
-            //   top: 15%;
-            //   left: 20%;
-            //   width: 2vw;
-            //   transform: rotate(-45deg);
-            // }
           }
         }
       }
 
       .icon-container {
-        //flex: 0 18vw;
-        margin-left: 1vw;
+        position: absolute;
+        left: 2vw;
         @include FlexCenter();
+        height: 100%;
 
+
+        svg {
+          display: block;
+          max-width: map.get($imgSizes, 'zero');
+          max-height: map.get($imgSizes, 'zero');
+        }
         > div {
-          //height: 100%;
         }
       }
 
@@ -140,13 +125,12 @@ $fontSize2Lg: 2.25vw;
         width: 100%;
         margin-right: 1vw;
         text-shadow: 1px 1px 2px utility.$dive-black;
-        @include FlexCenter();
 
-        font-size: $fontSize;
+        font-size: map.get($fontSecondarySizes, 'zero');
         white-space: nowrap;
 
         .large {
-          font-size: $fontSize2;
+          font-size: map.get($fontPrimarySizes, 'zero');
         }
 
         .center {
@@ -156,28 +140,16 @@ $fontSize2Lg: 2.25vw;
         }
       }
     }
-
     @include utility.media-breakpoint-gte(xs) {
       .card-content {
-        .icon-container {          
-          @include FlexCenter;
-          margin: 0 0 1vw;         
+        width: 70vw;
+      }
+    }
 
-          svg {
-            max-width: $imgSize;
-            max-height: $imgSize;
-          }
-        }
-
-        .text-container {
-          @include FlexCenter;
-          margin: 0;
+    @include utility.media-breakpoint-gte(sm) {
+      .card-content {
+        > div {
           flex-direction: column;
-          //font-size: 1.5vw;
-
-          .large {
-            //font-size: 2.25vw;
-          }
         }
       }
     }
@@ -201,13 +173,13 @@ $fontSize2Lg: 2.25vw;
 
     @include utility.media-breakpoint-gte(lg) {
       .card-content {
-        width: $cardWidthLg;
-        height: $cardHeightLg;
+        width: map.get($cardWidths, 'lg');
+        height: map.get($cardHeights, 'lg');
 
         .icon-container {
           svg {
-            max-width: $imgSizeLg;
-            max-height: $imgSizeLg;
+            max-width: map.get($imgSizes, 'lg');
+            max-height: map.get($imgSizes, 'lg');
           }
         }
         
@@ -215,10 +187,10 @@ $fontSize2Lg: 2.25vw;
           @include FlexCenter;
           margin: 0;
           flex-direction: column;
-          font-size: $fontSizeLg;
+          font-size: map.get($fontSecondarySizes, 'lg');
 
           .large {
-            font-size: $fontSize2Lg;
+            font-size: map.get($fontPrimarySizes, 'lg');
           }
         }
       }
