--- a/packages/public-client/src/app/components/pages/inside/inside.component.html
+++ b/packages/public-client/src/app/components/pages/inside/inside.component.html
@@ -19,12 +19,12 @@
     </a>
   </div>
   <div class="flyers">
-    <img id="anniversary" class="specials" src="assets/images/specials/10th_Anniversary_Specials.png" />
+    <img id="anniversary" class="specials" src="assets/images/specials/Taki Takos TNT $8.50.jpg" />
     <img id="menu" class="menu" src="assets/images/menu/Dive_Inn_Menu.jpg" />
   </div>
   <div class="cluck-container">
     <a class="cluck" href="http://cluckchickenden.com/" target="_blank">
-      <img src="assets/images/Cluck_Chicken.svg" />
+      <img id="cluck" src="assets/images/Cluck_Chicken.svg" />
       <div>
         <h2>Cluck Chicken</h2>
       </div>
