--- a/packages/public-client/src/app/components/shared/icon-card/icon-card.component.scss
+++ b/packages/public-client/src/app/components/shared/icon-card/icon-card.component.scss
@@ -49,7 +49,7 @@ $backBtnSize: 0.35vw;
     margin: 0;
     //gap: 4vw; // only flex up to sm size
     font-size: 1.65rem;
-    perspective: 1000px;
+    perspective: 2000px;
     cursor: pointer;
     
     .card-content {
@@ -82,7 +82,7 @@ $backBtnSize: 0.35vw;
         &.card-face {
         }
         &.card-back {
-          transform: rotateY(180deg);
+          transform: rotateY(180deg) rotateZ(180deg);
           background-color: utility.$dive-black;
           overflow: hidden;
 
@@ -116,6 +116,11 @@ $backBtnSize: 0.35vw;
           display: block;
           max-width: map.get($imgSizes, 'zero');
           max-height: map.get($imgSizes, 'zero');
+
+          path {
+            fill: utility.$dive-black;
+            stroke: utility.$dive-black;
+          }
         }
         > div {
         }
