mobile style tweaking

--- a/packages/public-client/src/app/components/features/contact-section/contact-section.component.html
+++ b/packages/public-client/src/app/components/features/contact-section/contact-section.component.html
@@ -12,7 +12,7 @@
   <app-icon-card [config]="config[2]">
     <div class="contact-methods-card">
       <a href="tel:7202426157"><span>720 &#8226; 242 &#8226; 6157</span></a>
-      <a href="mailto:contact@diveinndenver.com" target="_blank"><span>contact@diveinndenver.com</span></a>
+      <a href="mailto:contact@diveinndenver.com" target="_blank"><span>contact@</span><span>diveinndenver.com</span></a>
     </div>
   </app-icon-card>
 </div>
