--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -73,18 +73,18 @@
     <div class="blurb">
       <p>
         Denver's
-        <a href="javascript:void(0)">#1 neighborhood bar</a>
+        <a routerLink="/inside" fragment="construction">#1 neighborhood bar</a>
         since 2012, with
-        <a href="javascript:void(0)">specials</a>
+        <a routerLink="/inside" fragment="specials">specials</a>
         every day, all your favorite
-        <a href="javascript:void(0)">games</a>,
+        <a routerLink="/inside" fragment="construction">games</a>,
         exclusive
-        <a href="javascript:void(0)">events</a>
+        <a routerLink="/inside" fragment="construction">events</a>
         & private
-        <a href="javascript:void(0)">parties</a>.
+        <a routerLink="/inside" fragment="construction">parties</a>.
       </p>
       <p>Grab your
-        <a href="javascript:void(0)">friends</a>
+        <a routerLink="/inside" fragment="construction">friends</a>
         and...
         <span class="titleFont">Dive Inn</span>
       </p>
