--- a/packages/public-client/src/app/components/pages/inside/inside.component.html
+++ b/packages/public-client/src/app/components/pages/inside/inside.component.html
@@ -19,7 +19,7 @@
     </a>
   </div>
   <div class="flyers">
-    <img id="anniversary" class="specials" src="assets/images/specials/Taki Takos TNT $8.50.jpg" />
+    <img id="specials" class="specials" src="assets/images/specials/Taki Takos TNT $8.50.jpg" />
     <a href="https://takitakos.com/" target="_blank"><img id="menu" class="menu" src="assets/images/menu/Dive_Inn_Menu.jpg" /></a>
   </div>
   <div class="cluck-container">
