--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -31,15 +31,15 @@
   <div class="page-title-section">
     <div class="title-callout">
       <h2 class="title-callout-title">
-        <div>F</div>
-        <div>e</div>
-        <div>a</div>
-        <div>t</div>
-        <div>u</div>
-        <div>r</div>
-        <div>i</div>
-        <div>n</div>
-        <div>g</div>
+        <div style="--animation-order: 0" data-content="F">F</div>
+        <div style="--animation-order: 1" data-content="e">e</div>
+        <div style="--animation-order: 2" data-content="a">a</div>
+        <div style="--animation-order: 3" data-content="t">t</div>
+        <div style="--animation-order: 4" data-content="u">u</div>
+        <div style="--animation-order: 5" data-content="r">r</div>
+        <div style="--animation-order: 6" data-content="i">i</div>
+        <div style="--animation-order: 7" data-content="n">n</div>
+        <div style="--animation-order: 8" data-content="g">g</div>
       </h2>
       <div class="title-callout-content">
         <a routerLink="/inside" fragment="menu" class="takis">
