--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -129,13 +129,8 @@ $verticalGap: 0.75rem;
         position: absolute;
         bottom: 3vw;
         left: 50vw;
-        transform: translateX(-50%);
-        opacity: 0.5;
-        transition: opacity 0.3s ease;
-        &:hover {
-          opacity: 1;
-        }
-
+        transform: translateX(-50%);        
+        
         .title-callout-title {
           position: absolute;
           left: 11.3vw;
@@ -144,12 +139,43 @@ $verticalGap: 0.75rem;
           text-align: center;
           transform: rotate(-25deg);
           font-size: 1.2vw;
+    
+          $textColor: utility.$dive-gray-dk2;
+          $textColorLt: utility.$dive-yellow;
+          $animationTime: 5s;
 
           div {
+            @keyframes attentionBlink {
+              0% { opacity: 1; text-shadow: none; color: $textColor; transform: scale(1) rotate(25deg); }
+              2.5% { opacity: 1; text-shadow: 0px 0px 3px $textColorLt; color: $textColorLt; transform: scale(1) rotate(25deg); }
+              5% { opacity: 1; text-shadow: none; color: $textColor; transform: scale(1) rotate(25deg); }
+            }
+            @keyframes attentionBlink2 {
+              0% { opacity: 0; text-shadow: none; color: $textColor; }
+              2.5% { opacity: 1; text-shadow: 0px 0px 3px $textColorLt; color: $textColorLt; transform: scale(1); }
+              5% { opacity: 0; text-shadow: none; color: $textColor; }
+              7.5% { opacity: 0; text-shadow: none; color: $textColor; }
+              10% { opacity: 1; text-shadow: 0px 0px 3px $textColorLt; color: $textColorLt; }
+              12.5% { opacity: 0; text-shadow: none; color: $textColor; }
+            }
+            position: relative;
             margin: 0;
             padding: 0;
             line-height: 0.9;
             transform: rotate(25deg);
+            color: utility.$dive-gray-dk2;
+            opacity: 1;//0.5;
+            animation: attentionBlink $animationTime linear infinite;
+            animation-delay: calc(var(--animation-order) * 200ms);
+            &::before {
+              content: attr(data-content);
+              position: absolute;
+              top: 0; right: 0; bottom: 0; left: 0;
+              color: utility.$dive-gray-dk2;
+              opacity: 0;
+              animation: attentionBlink2 $animationTime linear infinite;
+              animation-delay: 2.2s;
+            }
           }
         }
         .title-callout-content {
@@ -160,12 +186,15 @@ $verticalGap: 0.75rem;
             &::after {
               content: none;
             }
-            &:hover, &:active {
-              opacity: 1;
-            }
+            opacity: 0.5;
+            transition: opacity 0.2s ease;
           }
 
           .takis {       
+            &:hover, &:active {
+              opacity: 1;
+            }
+
             h2 {
               margin: -1vw 0 0;
             }
@@ -177,6 +206,10 @@ $verticalGap: 0.75rem;
           .cluck {
             position: relative;
             left: 0.5vw;
+            &:hover, &:active {
+              opacity: 1;
+            }
+            
             img {
               width: 9vw;
             }
