--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -53,7 +53,10 @@
     </div>
 
     <app-mouse-facer-title-card [titleLines]="siteTitleLines" imgUrl="url(assets/images/home/dive-inn-exterior.jpg)"
-      [height]="'50vw'">
+      [height]="'50vw'"
+      [bgPosition]="bgPosition"
+      [bgSize]="bgSize"
+    >
     </app-mouse-facer-title-card>
     <a class="westword-award" href="https://www.westword.com/best-of/2022/readers-choice/best-dive-bar-13820484"
       target="_blank">
