--- a/packages/public-client/src/app/components/shared/mouse-facer-title-card/mouse-facer-title-card.component.html
+++ b/packages/public-client/src/app/components/shared/mouse-facer-title-card/mouse-facer-title-card.component.html
@@ -1,4 +1,8 @@
-<app-mouse-facer [imgSrc]="imgUrl"></app-mouse-facer>
+<app-mouse-facer [imgSrc]="imgUrl" 
+  [bgSize]="bgSize"
+  [bgPosition]="bgPosition"
+>
+</app-mouse-facer>
 <div class="title-container">
   <h1 *ngFor="let line of titleLines" 
     [attr.card-title]="line"
