--- a/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
+++ b/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
@@ -5,7 +5,7 @@
 
   .mouse-facer-container {
     position: relative;
-    background: magenta;
+    background: utility.$dive-black; //magenta;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -15,8 +15,8 @@
       //$temp: url(var(--img-src));
       height: 100%;
       background-image: var(--imgSrc);
-      background-size: cover;
-      background-position: 0% var(--bgPositionVertical);
+      background-size: var(--bgSize);
+      background-position: var(--bgPosition);
       transform: scale(1.15) translateZ(100px);
       transition: all 0.1s linear;
     }
