--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -155,7 +155,7 @@
   </div>
 
   <app-mouse-facer-card title="Wide Open" description="3 garage doors that open onto 3 patios"
-    imgUrl="url(assets/images/inside/Interiors_163.jpg)" [textPosition]="MouseFacerTextPostionsEnum.BOTTOM_LEFT"
+    imgUrl="url(assets/images/inside/Interiors_163.jpg)" [textPosition]="MouseFacerTextPostionsEnum.BOTTOM_LEFT" [backgroundPosition]="'50% 42%'"
     [title]="mouseFacerCardTitle_WideOpen" [height]="'40vw'">
   </app-mouse-facer-card>
 
