--- a/packages/public-client/src/app/components/shared/mouse-facer-card/mouse-facer-card.component.html
+++ b/packages/public-client/src/app/components/shared/mouse-facer-card/mouse-facer-card.component.html
@@ -1,5 +1,6 @@
 <app-mouse-facer [imgSrc]="imgUrl"
   [bgPosition]="backgroundPosition"
+  bgSize="cover"
 ></app-mouse-facer>
 <div class="text-container"
   [class.top-left]="textPosition === MouseFacerTextPositionsEnum.TOP_LEFT"
